# socialcare-subsidy-agent

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  azure.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.azure/: deployment-plan.md
.github/workflows/: ci.yml
app/: __init__.py
app/agent/: agent_config.yaml  classifier.py  handoff.py  instructions.md  orchestrator.py  rag.py  safety.py
app/api/: main.py  routes.py  schemas.py
app/core/: __init__.py  audit.py  config.py  telemetry.py
app/ui/: streamlit_app.py
data/kb/: 01_subsidio_desempleo.md  02_servicios_ninez.md  03_apoyo_familias.md  04_documentos_generales.md  05_canales_atencion.md  06_reglas_escalamiento.md  07_ia_responsable.md
data/samples/: evaluation_dataset.json  sample_cases.json
docs/: architecture.md  demo_ready_checklist.md  demo_script.md  deployment_azure_foundry.md  executive_pitch.md  local_testing_report.md  mermaid_architecture.md  responsible_ai.md
infra/: README.md  main.bicep  parameters.dev.json
tests/: test_classifier.py  test_handoff.py  test_local_demo.py  test_rag.py  test_safety.py
